<resources>
    <string name="app_name" translatable="false">Solasi</string>
    <string name="layout_name" translatable="false">Home</string>
    <string name="action_settings" translatable="false">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="email_required">Email is required</string>
    <string name="password_required">Password is required</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign Up</string>
    <string name="welcome">"Welcome %1s!"</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in_prompt">Already have an account? Sign In</string>
    <string name="sign_up_prompt">Don\'t have an account? Sign Up</string>
    <string name="registration_success">User registration successfull</string>
    <string name="email_already_registered">Email already registered</string>

    <string name="notification_like">Liked your status</string>
    <string name="notification_reply">Replied your status</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="tab_text_1">Status</string>
    <string name="tab_text_2">Notification</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_logout">Logout</string>
    <string name="sign_up_camera">Tap on camera icon to choose profile picture</string>
    <string name="sign_up_display_name">Enter Display Name</string>
    <string name="like_placeholder">%1s Like</string>
    <string name="already_like_warning">You\'re already liked the status</string>
    <string name="status_posted">Status posted!</string>
    <string name="select_profile_image">Select Profile Image</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>
    <string name="status_placeholder">Status</string>
</resources>