<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notification"
            android:title="@string/menu_notification" />
        <item
            android:id="@+id/nav_extras"
            android:icon="@drawable/ic_baseline_star_24"
            android:title="Extras" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_2"
            android:title="@string/menu_logout" />
    </group>
</menu>